# RECON

./: .gitignore  README.md  linear-universal.py  logistic-universal.py
MLModel/: Global.py  LoadCoreset.py  LoadData.py  hidden.py  optimizer.py  paramRange.py
MLModel/MLmodel/: linearRegression.py  logisticRegression.py
RECON/: CMakeLists.txt  data.h  global.h  main.cpp  mycsBrazil.h  mycsIMDBC.h  mycsStackn.h  mycsTaxi.h  type.h  util.h
Revision/: DNN.ipynb  DecisionTree-Class.ipynb  DecisionTree-Reg.ipynb  base-agg.ipynb
preprocess/: Brazil.py  IMDBC-5.py  IMDBC-Linear.py  stack.py  taxi.py
